@@ -21,6 +21,7 @@
 15. Add checkbox to indicate that server auto-updates when files changed.
     Thanks to Wolfgang Scherer.
 16. Add GUI option to control volume step.
+17. Add command-line options to set debugging and to disable network access.
 
 2.2.0
 -----
